# Dshop

./: .gitignore  Contributors.md  Dockerfile  Dockerfile.bak  README.md  build_and_push.sh  docker-entrypoint.sh  handler.py  pylama.ini  pyproject.toml  roadmap.md  wsgi_api.py  zappa_settings.json  zappa_settings.py
Dshop/: conftest.py  db.sqlite3  db2.sqlite3  docker-entrypoint.sh  env-template  manage.py  pyproject.toml  pytest.ini  requirements.txt  sitemap.py
Dshop/.ebextensions/: django.config  packages.config  securitygroup.config  securitygroup.config-bak
Dshop/.elasticbeanstalk/: config.yml
Dshop/Dshop/: asgi.py  settings.py  settings_tests.py  sitemaps.py  urls.py  wsgi.py
Dshop/Dshop/tests/: test_sitemap.py
Dshop/apps/core/: api_views.py  apps.py  context_processors.py  views.py
Dshop/apps/payments/: apps.py  tests.py  urls.py  views.py
Dshop/apps/payments/tests/: test_checkout_session.py
Dshop/apps/products_catalogue/: admin.py  api_permissions.py  api_urls.py  api_views.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
Dshop/apps/products_catalogue/fixtures/: fixtures_products.json  products.json
Dshop/apps/products_catalogue/migrations/: 0001_initial.py  0002_alter_category_options_alter_subcategory_options.py  0002_alter_order_user.py  0003_order_cart_total.py  0003_remove_category_sort_category_parent_and_more.py  0004_alter_category_parent.py  0005_alter_category_name_alter_category_slug.py  0006_alter_category_slug.py  0007_product_alter_category_slug_productimage_and_more.py  0007_product_productimage.py  0008_rename_price_last_30_days_product_lowest_price_last_30_days_and_more.py  0009_ceneocategory.py  0010_alter_ceneocategory_options_and_more.py  0011_remove_category_ceneo_category_id_and_more.py  0012_alter_product_full_description_and_more.py  0012_category_updated_at.py  0012_pricechangehistory.py  0013_ceneocategory_parent.py  0013_merge_20231104_1200.py  (+13 more)
Dshop/apps/shipping/: apps.py  forms.py  urls.py  views.py
Dshop/apps/users/: admin.py  api_urls.py  api_views.py  apps.py  conftest.py  forms.py  models.py  serializers.py  urls.py  views.py
Dshop/static/: main.js
Dshop/templates/: base.html
(+44 files in other folders)
