[tool.poetry]
name = "dshop"
version = "0.1.0"
description = "Django E-shop project"
authors = ["PyMasters"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
python-decouple = "^3.8"
pillow = "^10.0.0"
lxml = "^4.6"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
