[tool.poetry]
name = "dshop"
version = "0.1.0"
description = "Django E-shop project"
authors = ["PyMasters"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
python-decouple = "^3.8"
pillow = "^10.0.0"
requests = "^2.31.0"
sorl-thumbnail = "^12.10.0"
stripe = "^6.4.0"
requests_mock = "^1.11.0"
charset_normalizer = "^3.3.0"
freezegun = "^1.2.2"
django-tinymce = "^3.6.1"
dj-shop-cart = "^7.0.3"
djangorestframework="3.14.0"
drf-spectacular="0.26.5"
django-filter = "^23.5"
sentry-sdk = "^1.39.1"
zappa = "^0.58.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.29"
django-storages = "^1.14.2"
uwsgi = "^2.0.24"
gevent = "^23.9.1"
lxml = "^5.1.0"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119